--- a/petwalk_admin/package.json
+++ b/petwalk_admin/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.23.1",
+    "axios": "^0.27.2",
     "concurrently": "^7.4.0",
     "electron": "^20.1.3",
     "electron-packager": "^16.0.0",
