--- a/petwalk_admin/package.json
+++ b/petwalk_admin/package.json
@@ -11,13 +11,15 @@
     "concurrently": "^7.4.0",
     "electron": "^20.1.3",
     "electron-packager": "^16.0.0",
+    "formik": "^2.2.9",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "wait-on": "^6.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "main": "main.js",
   "scripts": {
