--- a/petwalk_admin/package.json
+++ b/petwalk_admin/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.23.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.2",
+    "chart.js": "^4.0.1",
     "concurrently": "^7.4.0",
     "electron": "^20.1.3",
     "electron-packager": "^16.0.0",
@@ -17,6 +18,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-chartjs-2": "^5.0.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
